# dartlab

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_KR.md  pyproject.toml
.github/scripts/: updateKindList.py
.github/workflows/: kindlist.yml  publish.yml
_deprecated/: DocFooter.svelte  sitemap.xml.bak
blog/: 001-everything-about-dart.md  002-opendart-review.md  003-beyond-the-numbers.md  005-python-financial-analysis.md  everything-about-dart.md
docs/: STATUS.md  changelog.md  index.md
docs/_deprecated/: bridge-matching.md
docs/api/: finance-others.md  insight.md  overview.md  rank.md  sector.md  timeseries.md
docs/getting-started/: installation.md  quickstart.md
docs/stylesheets/: theme.css
docs/tutorials/: 01_quickstart.md  02_financial.md  03_disclosure.md  04_advanced.md  05_cross_company.md  STATUS.md  index.md
docs/user-guide/: bridge-matching.md
experiments/001_numberBridgeMatching/: 001_bridgeTest.py  002_bridgeInterpolation.py  003_breakpointDetection.py  004_fullPipeline.py  005_falseMatchVerification.py  STATUS.md
experiments/016_tangibleAsset/: step01_extract.py  step02_rawContent.py  step03_parser.py  step04_debug.py  step04b_debug_deep.py  step04c_kb.py  step05_mass.py  step06_debug_fails.py  step06b_ncsoft.py  step06c_remaining.py  step07_remaining13.py  step08_quality.py
experiments/017_statementsConsSep/: step01_survey.py  step02_content.py  step03_coverage.py  step04_extractSeparate.py  step04b_failAnalysis.py  step04c_spacDebug.py  step04d_tableDebug.py  step05_unified.py  step05b_failAnalysis.py  step05c_splitFix.py  step06_fullTest.py  step06b_noSpac.py
experiments/018_notesInventory/: step01_allSections.py  step01b_keywordSurvey.py  step02_intangibleExplore.py  step02b_intangibleMass.py  step03_easyTargets.py  step04_inventory.py  step05_allCandidates.py  step06_inventoryFail.py  step07_multiHeader.py  step08_inventoryParser.py  step08b_remainFail.py  step08c_quality.py  step08d_samsungDebug.py  step09_borrowings.py  step10_genericParser.py  step10b_fails.py  step11_failAnalysis.py  step12_parseLogicFails.py  step13_improveParse.py  step14_patternDistribution.py
experiments/019_audit/: step01_parser.py  step02_parser.py  step03_parser.py  step04_timeseries.py
experiments/020_executive/: step01_explore.py  step02_parser.py  step03_timeseries.py
experiments/021_executivePay/: step01_parser.py
experiments/022_boardOfDirectors/: step01_explore.py  step02_parser.py
experiments/023_capitalChange/: step01_explore.py  step02_parser.py
experiments/024_contingentLiability/: step01_explore.py  step02_parser.py
experiments/029_affiliateGroup/: step01_explore.py  step02_parser.py
experiments/030_fundraising/: step01_explore.py  step02_parser.py
experiments/031_salesOrder/: step01_explore.py  step02_parser.py
experiments/032_productService/: step01_explore.py  step02_parser.py
experiments/033_riskDerivative/: step01_explore.py  step02_parser.py
experiments/034_articlesOfIncorporation/: step01_explore.py  step02_parser.py
experiments/035_otherFinance/: step01_explore.py  step02_parser.py
experiments/036_companyHistory/: step01_explore.py
experiments/037_shareholderMeeting/: step01_explore.py
experiments/038_auditSystem/: step01_explore.py
experiments/039_investmentInOther/: step01_explore.py
experiments/040_subsequentEvents/: step01_explore.py
experiments/041_otherReference/: step01_explore.py
experiments/042_votingRights/: step01_explore.py
experiments/043_businessOverview/: step01_explore.py
experiments/044_companyOverview/: step01_explore.py
experiments/046_insightEngine/: 013_sectorClassifier.py  014_sectorFullCoverage.py  016_sectorBenchmark.py  017_sectorRelativeGrade.py  019_sizeRank.py  STATUS.md
experiments/049_edgarEngine/: 001_bulkDump.py  002_snakeIdAlignment.py  003_pivotNormalize.py  004_standardMapping.py  005_fullPipeline.py  006_bulkPipeline.py  STATUS.md
experiments/050_excelExport/: 001_basicExport.py
landing/: package-lock.json  package.json  svelte.config.js  vite.config.ts
landing/scripts/: postbuild.js  syncBrand.js
landing/src/: app.css  app.html
landing/src/lib/: brand.ts
landing/src/routes/: +page.svelte
landing/static/: llms.txt
notebooks/: STATUS.md
notebooks/getting-started/: quickstart.ipynb
notebooks/tutorials/: 01_quickstart.ipynb  02_financial.ipynb  03_disclosure.ipynb  04_advanced.ipynb
scripts/: generateSpec.py
src/dartlab/: API_SPEC.md  STATUS.md  __init__.py  cli.py  company.py  compare.py  display.py  server.py  usCompany.py
src/dartlab/core/: STATUS.md  __init__.py  constants.py  (+6 more)
tests/: conftest.py  test_agent.py  test_ai_parser.py  test_cli_providers.py  test_company.py  test_context.py  test_core_parser.py  test_disclosure.py  test_edgarFinance.py  test_excelExport.py  test_finance_modules.py  test_finance_statements.py  test_finance_summary.py  test_insightEngine.py  test_metadata.py  test_notes_detail.py  test_pipeline.py  test_prompts.py  test_report_engine.py  test_sectorEngine.py  test_spec_integrity.py  test_tangible_asset.py  test_tools_chart.py  test_tools_registry.py  test_tools_table.py  test_tools_text.py
(+395 files in other folders)
