[project]
name = "dartlab"
version = "0.1.6"
description = "DART 공시 문서를 완벽하게 분석하는 Python 라이브러리 — 숫자와 텍스트 모두"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [
    {name = "eddmpython"}
]
keywords = [
    "dart",
    "financial-statements",
    "korea",
    "disclosure",
    "accounting",
    "polars",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "alive-progress>=3.3.0",
    "polars>=1.0.0",
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://github.com/eddmpython/dartlab"
Repository = "https://github.com/eddmpython/dartlab"
Issues = "https://github.com/eddmpython/dartlab/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["experiments"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "E501", "E741", "F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
