[project]
name = "dartlab"
version = "0.2.3"
description = "DART 공시 문서를 완벽하게 분석하는 Python 라이브러리 — 숫자와 텍스트 모두"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [
    {name = "eddmpython"}
]
keywords = [
    "dart",
    "financial-statements",
    "korea",
    "disclosure",
    "accounting",
    "polars",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "alive-progress>=3.3.0",
    "polars>=1.0.0",
    "requests>=2.32.5",
    "rich>=14.3.3",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",
]
llm-anthropic = [
    "openai>=1.0.0",
    "anthropic>=0.30.0",
]
charts = [
    "plotly>=5.0.0",
]
ui = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
]
all = [
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "plotly>=5.0.0",
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
]

[project.scripts]
dartlab = "dartlab.cli:main"

[project.urls]
Homepage = "https://github.com/eddmpython/dartlab"
Repository = "https://github.com/eddmpython/dartlab"
Issues = "https://github.com/eddmpython/dartlab/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["experiments"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "E501", "E741", "F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "dartlab[all]",
    "pillow>=12.1.1",
    "pytest>=9.0.2",
]
